# reddit-insights-claude-agent

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  LINUX_SETUP_PROMPT.md  PROJECT_CONTEXT_AND_FILE_GUIDE.md  README.md  UPDATE_CONNECTOR.md  install.command  install.sh  pyproject.toml  setup-code.sh
.claude/agents/: product-insights-analyst.md
.claude/commands/: api-insights.md  ask-insights.md  awareness-gaps.md  channel-insights.md  compare-periods.md  competitor-insights.md  competitors.md  content-plan.md  daily-insights.md  evidence.md  existing-capabilities.md  feature-demand.md  feature-requests.md  github-insights.md  lead-magnets.md  new-feature-analysis.md  next-actions.md  product-roadmap.md  retail-feature-research.md  retail-insights.md  roadmap.md  seo-insights.md  setup-desktop.md  status.md  strategy-builder.md  trend-check.md  update-connector.md  update-insights-data.md  webinar-ideas.md  (+2 more)
config/: claude_desktop_config.example.json
context/: nubra-app-context.md
desktop/: DAILY_INSIGHTS_PROMPT.md  INSIGHTS_REPORT_EXAMPLE.md  LEADERSHIP_REPORT_EXAMPLE.md
prompts/: prompt-library.md
scripts/: configure_claude_desktop.py  diagnose.py  install.ps1  install_claude_desktop.ps1  refresh-data.sh  setup_claude_code.py  setup_unix.py  update_local_data.ps1
tests/: test_flow.py  test_installer.py
updates/: 2026-06-30-1024-v2-1-self-update.md  2026-06-30-1323-v2-2-youtube-agent.md  2026-06-30-1352-v2-3-channel-focus.md  2026-06-30-1755-v2-4-seo-insights.md  2026-07-01-1725-v2-5-retail-feature-catalog.md  README.md  latest.md
(+10 files in other folders)
