[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-product-insights-agent"
version = "2.4.0"
description = "Incremental GitHub sync, local evidence store, analysis engine, and Claude MCP"
requires-python = ">=3.11"
dependencies = ["mcp>=1.9"]

[project.scripts]
insights-agent = "reddit_insights_agent.cli:main"
insights-mcp = "reddit_insights_agent.server:main"

[tool.setuptools.packages.find]
where = ["src"]
